2010-05-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14291: TCEforms: Incorrect background color style in type fields with images (Thanks to Stefan Galinski)
	* Fixed bug #14217: options.pageTree.showPageIdWithTitle doesn't work in record picker and RTE (Thanks to Reinhard Fuehricht)

2010-05-06  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14185: The tt_content.fe_groups field is not placed under the Access Tab (Thanks to Peter Klein & Lars Houmark)

2010-05-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12470: PHP-5.3 error: function define_syslog_variables() is deprecated (Thanks to Rupert Germann)

2010-05-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14295: Recycler and tcemain->process_cmdmap cannot undelete some records (thanks to Lars Houmark)
	* Fixed bug #14307: fe_user passwords are visible in the info popup window in the backend (thanks to Lars Houmark)

2010-05-03  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7795: opendocs: documents are opened without pagetree (thanks to Stefan Galinski)

2010-05-02  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14276: tceforms: Title of a record does not use API call to limit the character

2010-05-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #2186: Error installing static_info_tables

2010-05-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14272: typo in t3lib_PageRenderer (thanks to Steffen Gebert)
	* deleted testcase for comparing ereg_ usage as it doesn't work with php >= 5.3

2010-04-30  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14179: TCA select doesn't show record titles whic start with <= (thanks to Georg Ringer)

2010-04-30  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #13758: page.jsInline / page.jsFooterInline may fail with config.removeDefaultJS=external (thanks to Steffen Ritter)

2010-04-30  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #14207: Duplicate submodule URL in JavaScript