@@ -1,5 +1,6 @@
 2010-05-06  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #14315: Filelist: AJAX bug with multiple file mounts in the folder tree
 	* Fixed bug #14291: TCEforms: Incorrect background color style in type fields with images (Thanks to Stefan Galinski)
 	* Fixed bug #14217: options.pageTree.showPageIdWithTitle doesn't work in record picker and RTE (Thanks to Reinhard Fuehricht)
 
